--- a/src/test/resources/jspringbot.properties
+++ b/src/test/resources/jspringbot.properties
@@ -1,6 +1,17 @@
 selenium.browserstack.username=param35
 selenium.browserstack.accesskey=zDxti1ZepVXwBFrrzYez
 
+
+
+
+
+selenium.chrome.driver.version=2.35
+selenium.chrome.driver.url.download=http://chromedriver.storage.googleapis.com/
+
+selenium.gecko.driver.version=0.20.0
+selenium.gecko.driver.url.download=https://github.com/mozilla/geckodriver/releases/download/
+
+
 selenium.browserstack.browser=firefox
 selenium.browserstack.browserVersion=47
 selenium.browserstack.os=OS X
