--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.jspringbot</groupId>
     <artifactId>jspringbot-libraries</artifactId>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.9</version>
   </parent>
 
   <groupId>com.github.robertdeocampojr</groupId>
@@ -21,7 +21,7 @@
   <properties>
     <libdoc.name>JSpringBot Selenium Extension Library</libdoc.name>
     <libdoc.output>JSpringBotSeleniumExtensionLibrary.html</libdoc.output>
-    <jspringbot.version>1.6-SNAPSHOT</jspringbot.version>
+    <jspringbot.version>1.9</jspringbot.version>
     <selenium.driver.version>3.8.1</selenium.driver.version>
     <spring.version>3.1.0.RELEASE</spring.version>
     <junit.version>4.8.1</junit.version>
@@ -61,6 +61,11 @@
       <artifactId>jspringbot-selenium</artifactId>
       <version>${jspringbot.version}</version>
     </dependency>
+      <dependency>
+          <groupId>org.jspringbot</groupId>
+          <artifactId>jspringbot-pretty-logger</artifactId>
+          <version>1.9</version>
+      </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
@@ -139,6 +144,11 @@
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
       <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
     </dependency>
     <dependency>
       <groupId>net.bytebuddy</groupId>
