--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>com.github.robertdeocampojr</groupId>
   <artifactId>jspringbot-selenium-extension</artifactId>
-  <version>2.7</version>
+  <version>2.8</version>
   <packaging>jar</packaging>
 
   <name>jspringbot-selenium-extension</name>
@@ -65,7 +65,7 @@
       <dependency>
           <groupId>org.jspringbot</groupId>
           <artifactId>jspringbot-pretty-logger</artifactId>
-          <version>1.9</version>
+          <version>${jspringbot.version}</version>
       </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
