--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.github.robertdeocampojr</groupId>
     <artifactId>jspringbot-selenium-extension</artifactId>
-    <version>2.16</version>
+    <version>2.27</version>
     <packaging>jar</packaging>
 
     <name>jspringbot-selenium-extension</name>
@@ -23,7 +23,7 @@
         <libdoc.name>JSpringBot Selenium Extension Library</libdoc.name>
         <libdoc.output>JSpringBotSeleniumExtensionLibrary.html</libdoc.output>
         <jspringbot.version>1.9</jspringbot.version>
-        <selenium.driver.version>3.8.1</selenium.driver.version>
+        <selenium.driver.version>3.141.59</selenium.driver.version>
         <spring.version>3.1.0.RELEASE</spring.version>
         <junit.version>4.8.1</junit.version>
         <junit.addons.version>1.4</junit.addons.version>
@@ -41,11 +41,11 @@
 
     <distributionManagement>
         <snapshotRepository>
-            <id>ossrh</id>
+            <id>sonatype-nexus-staging</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
         <repository>
-            <id>ossrh</id>
+            <id>sonatype-nexus-staging</id>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
@@ -172,6 +172,11 @@
             <groupId>org.rauschig</groupId>
             <artifactId>jarchivelib</artifactId>
             <version>0.7.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
         </dependency>
     </dependencies>
 
