--- a/src/test/resources/jspringbot.properties
+++ b/src/test/resources/jspringbot.properties
@@ -19,3 +19,16 @@ selenium.browserstack.os.version=Mavericks
 selenium.browserstack.debug=true
 selenium.browserstack.project=TEST.PROJECT
 selenium.browserstack.build=TEST.BUILD
+
+
+ssh.connect.hostname=pharos.haveninc.com
+ssh.connect.username=robert
+ssh.connect.password=Rectawt6
+ssh.connect.port=22
+ssh.connect.pem.location=none
+ssh.connect.strict.hostKey.checking=no
+ssh.connect.remote.hostname=stage.db.hvn.io
+ssh.connect.local.port=3309
+ssh.connect.remote.port=3306
+ssh.connect.idrsa.filename=~/.ssh/id_rsa
+ssh.connect.pref.auth=publickey,keyboard-interactive,password
